acct-mgt/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acct-mgt
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: acct-mgt
          image: "ghcr.io/cci-moc/openshift-acct-mgt:master"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-vol
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: config-vol
          configMap:
            name: acct-mgt-quota-configmap
      serviceAccountName: acct-mgt-serviceaccount
      automountServiceAccountToken: true
