acct-mgt/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acct-mgt
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: acct-mgt
