acct-mgt/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acct-mgt
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: acct-mgt
  tls:
    termination: edge
